...
                text = stringResource(R.string.auth_screen_phone_number_input_label),
                style = LensaTheme.typography.text,
            )
            Column(modifier = Modifier.padding(horizontal = 16.dp)) {
                LensaInput(
                    modifier = Modifier.fillMaxWidth()
                        .testTag("auth_screen_phone_input"),
                    maxLength = Constants.RUSSIAN_PHONE_NUMBER_LENGTH,
                    value = state.phoneNumber,
                    inputType = KeyboardType.Phone,
                    onValueChanged = onPhoneNumberChanged,
                )
                // TODO маска ввода
...
//                        style = LensaTheme.typography.signature,
//                        color = LensaTheme.colors.textColorSecondary,
//                    )
//                }
                VSpace(h = 52.dp)
                LensaButton(
                    modifier = Modifier.testTag("auth_screen_button_get_code"),
                    text = stringResource(R.string.auth_screen_button_request_code),
                    onClick = onSendVerificationCodeClick,
                    enabled = state.isEnabledNextButton,
                    isFillMaxWidth = true,
                )
                FSpace()
...
