...
                text = stringResource(R.string.otp_screen_sent_message, state.phoneNumber),
                style = LensaTheme.typography.signature,
            )
            Column(modifier = Modifier.padding(horizontal = 16.dp)) {
                LensaInput(
                    modifier = Modifier
                        .testTag("otp_screen_otp_input")
                        .fillMaxWidth(),
                    maxLength = OTP_CODE_LENGTH,
                    value = state.otpInput,
                    inputType = KeyboardType.Number,
                    placeholder = stringResource(R.string.otp_screen_otp_input_placeholder),
                    onValueChanged = onOtpInputChanged,
...
                        color = LensaTheme.colors.textColorSecondary,
                    )
                }

                VSpace(h = 16.dp)
                LensaButton(
                    modifier = Modifier.testTag("otp_screen_button_continue"),
                    text = stringResource(R.string.otp_screen_continue_btn),
                    onClick = onNextClick,
                    isFillMaxWidth = true,
                    enabled = state.isButtonNextEnabled,
                )
                FSpace()
...
