...
            )
            Divider(
                modifier = Modifier.padding(horizontal = 16.dp),
                color = LensaTheme.colors.dividerColor,
            )
            LensaButtonWithIcon(
                modifier = Modifier.testTag("role_selector_screen_button_customer"),
                icon = R.drawable.ic_arrow_forward_2,
                text = "ЗАКАЗЧИК",
                isFillMaxWidth = true,
                onClick = onCustomerClick,
            )
            Divider(
...
